--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: deploy
+name: Deploy to GitHub Pages
 
 on:
   push:
@@ -25,10 +25,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: 'npm'
+          # cache: 'npm' # Removed because it requires package-lock.json to work
           
       - name: Install dependencies
-        run: npm ci
+        run: npm install # Changed from npm ci to allow installation without a pre-existing lock file
         
       - name: Build
         run: npm run build
